--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,13 @@
     <title>Hangman Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
 
-    <script src="./assets/js/index.js"></script>    
+<body>
+    <div id="hidden-word-container"></div>
+    <button id="btn">Change word</button>
+    <div id="keyboard-container">
+
+    <script src="./assets/js/index.js"></script>
 </body>
+
 </html>
