[FIX] Minor style bug

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button id="btn">Change word</button>
     <div id="keyboard-container">
 
+    
+    <script src="./assets/js/get_hidden_word.js"></script>        
     <script src="./assets/js/index.js"></script>
 </body>
 
