--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="hidden-word-container"></div>
+    <div id="word-container"></div>
     <button id="btn">Change word</button>
     <div id="keyboard-container">
 
