--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <div id="word-container"></div>
-    <button id="btn">Change word</button>
+    <button id="refresh-word-btn">Change word</button>
     <div id="keyboard-container">
 
+ 
     
     <script src="./assets/js/get_hidden_word.js"></script>        
+    <script src="./assets/js/get_keyboard.js"></script>        
     <script src="./assets/js/index.js"></script>
 </body>
 
