[ADDED] Score management #5
Implementation of the counter of failed and successful attempts and
their validations.
Print on console in case of victory and in case of defeat.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="word-container"></div>
-    <button id="refresh-word-btn">Change word</button>
+    <button id="refresh-word-btn">Change the word</button>
     <div id="keyboard-container">
 
  
