[UPDATED] Keyboard file renamed
The get_keyboard.js file has been renamed to manage_keyboard.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
     
     <script src="./assets/js/get_hidden_word.js"></script>        
-    <script src="./assets/js/get_keyboard.js"></script>        
+    <script src="./assets/js/manage_keyboard.js"></script>        
     <script src="./assets/js/index.js"></script>
 </body>
 
