[[FIX] Minor style changes

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
 
 <body class="flex column">
     <header id="header">
-        <div id="title-container">
+        <div id="title-container" class="bg-white">
             <h1 id="title">Hangman</h1>
         </div>
     </header>
     
-        <div id="word-container"></div>
-        <div id="draw-container">
-            <button id="refresh-word-btn">Change word</button>
-        </div>
-        <div id="keyboard-container">
+    <div id="word-container"></div>
+    <div id="draw-container">
+        <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
+    </div>
+    <div id="keyboard-container"></div>
+    <!-- <div id="win-box" class="flex column">
+        <div id="win-text">YOU WIN!</div>
+        <button id="pop-btn">OK</button>
+    </div> -->
+
    
 
 
