[ADDED] Messages of victory and defeat #8
The messages appear above everything else.

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
     </div>
     <div id="keyboard-container"></div>
-    <!-- <div id="win-box" class="flex column">
+    <!-- <div class="pop-box flex column">
         <div id="win-text">YOU WIN!</div>
-        <button id="pop-btn">OK</button>
+        <button class="pop-btn">OK</button>
     </div> -->
 
    
 
 
 
-
+    <script src="./assets/js/manage_messages.js"></script>
     <script src="./assets/js/manage_hidden_word.js"></script>
     <script src="./assets/js/manage_keyboard.js"></script>
     <script src="./assets/js/index.js"></script>
