--- a/index.html
+++ b/index.html
@@ -15,21 +15,32 @@
             <h1 id="title">Hangman</h1>
         </div>
     </header>
-    
+
     <div id="word-container"></div>
-    <div id="draw-container">
+    <div id="draw-container" class="flex">
+        <div id="draw-group">
+            <div id="line-1" class="gallows"></div>
+            <div id="line-2" class="gallows"></div>
+            <div id="line-3" class="gallows"></div>
+            <div id="line-4" class="gallows"></div>
+            <div id="line-5" class="gallows"></div>
+            <div id="head" class="hangman hangman-hidden"></div>
+            <div id="body" class="hangman hangman-hidden"></div>
+            <div id="arm-l" class="hangman hangman-hidden"></div>
+            <div id="arm-r" class="hangman hangman-hidden"></div>
+            <div id="leg-l" class="hangman hangman-hidden"></div>
+            <div id="leg-r" class="hangman hangman-hidden"></div>
+        </div>
+
         <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
     </div>
     <div id="keyboard-container"></div>
-    <!-- <div class="pop-box flex column">
-        <div id="win-text">YOU WIN!</div>
-        <button class="pop-btn">OK</button>
-    </div> -->
-
-   
 
 
 
+
+
+    <script src="./assets/js/manage_hangman.js"></script>
     <script src="./assets/js/manage_messages.js"></script>
     <script src="./assets/js/manage_hidden_word.js"></script>
     <script src="./assets/js/manage_keyboard.js"></script>
