[UPDATED] Created new CSS file, renamed classes
Created a new CSS file to manage the draw section.
Rename some classes with more effective names.
Also added some comments to the functions.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <div id="word-container"></div>
     <div id="draw-container" class="flex">
         <div id="draw-group">
-            <div id="line-1" class="gallows"></div>
-            <div id="line-2" class="gallows"></div>
-            <div id="line-3" class="gallows"></div>
-            <div id="line-4" class="gallows"></div>
-            <div id="line-5" class="gallows"></div>
-            <div id="head" class="hangman hangman-hidden"></div>
-            <div id="body" class="hangman hangman-hidden"></div>
-            <div id="arm-l" class="hangman hangman-hidden"></div>
-            <div id="arm-r" class="hangman hangman-hidden"></div>
-            <div id="leg-l" class="hangman hangman-hidden"></div>
-            <div id="leg-r" class="hangman hangman-hidden"></div>
+            <div id="gallow-line-1" class="gallows"></div>
+            <div id="gallow-line-2" class="gallows"></div>
+            <div id="gallow-line-3" class="gallows"></div>
+            <div id="gallow-line-4" class="gallows"></div>
+            <div id="gallow-line-5" class="gallows"></div>
+            <div id="hang-head" class="hangman hangman-hidden"></div>
+            <div id="hang-body" class="hangman hangman-hidden"></div>
+            <div id="hang-arm-l" class="hangman hangman-hidden"></div>
+            <div id="hang-arm-r" class="hangman hangman-hidden"></div>
+            <div id="hang-leg-l" class="hangman hangman-hidden"></div>
+            <div id="hang-leg-r" class="hangman hangman-hidden"></div>
         </div>
 
         <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
