[UPDATE] Hangman created in JS
The hangman drawing is generated and managed entirely in JS.

--- a/index.html
+++ b/index.html
@@ -16,25 +16,19 @@
         </div>
     </header>
 
-    <div id="word-container"></div>
-    <div id="draw-container" class="flex">
-        <div id="draw-group">
+    <div id="word-section"></div>
+    <div id="play-section" class="flex">
+        <div id="gallow-container">
             <div id="gallow-line-1" class="gallows"></div>
             <div id="gallow-line-2" class="gallows"></div>
             <div id="gallow-line-3" class="gallows"></div>
             <div id="gallow-line-4" class="gallows"></div>
             <div id="gallow-line-5" class="gallows"></div>
-            <div id="hang-head" class="hangman hangman-hidden"></div>
-            <div id="hang-body" class="hangman hangman-hidden"></div>
-            <div id="hang-arm-l" class="hangman hangman-hidden"></div>
-            <div id="hang-arm-r" class="hangman hangman-hidden"></div>
-            <div id="hang-leg-l" class="hangman hangman-hidden"></div>
-            <div id="hang-leg-r" class="hangman hangman-hidden"></div>
         </div>
-
+        <div id="hangman-container"></div>
         <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
     </div>
-    <div id="keyboard-container"></div>
+    <div id="keyboard-section"></div>
 
 
 
@@ -42,7 +36,7 @@
 
     <script src="./assets/js/manage_hangman.js"></script>
     <script src="./assets/js/manage_messages.js"></script>
-    <script src="./assets/js/manage_hidden_word.js"></script>
+    <script src="./assets/js/manage_word.js"></script>
     <script src="./assets/js/manage_keyboard.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
