--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
         <div id="hangman-container"></div>
         <button id="refresh-word-btn" class="bg-white c-blue">Change word</button>
         <div id="score-container">
-            <div id="won-container">
-                <p id="won-text">Won: 1</p>
-            </div>
-            <div id="won-container">
-                <p id="won-text">Lost: 0</p>
-            </div>
+            <p id="won-text"></p>
+            <p id="lose-text"></p>
         </div>
     </div>
     <div id="keyboard-section"></div>
@@ -41,7 +37,7 @@
 
 
 
-
+    <script src="./assets/js/manage_score.js"></script>
     <script src="./assets/js/manage_hangman.js"></script>
     <script src="./assets/js/manage_messages.js"></script>
     <script src="./assets/js/manage_word.js"></script>
