[ADDED] Functionality to the play section buttons
Each button in the play section has the functionality corresponding to
its name.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p id="won-text"></p>
             <p id="lose-text"></p>
         </div>
-        <button id="reset-btn" class="ply-btn bg-white c-blue margin-bottom">Reset</button>        
+        <button id="reset-score-btn" class="ply-btn bg-white c-blue margin-bottom">Reset Score</button>        
     </div>
     <div id="keyboard-section"></div>
 
