--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <script src="./assets/js/manage_score.js"></script>
     <script src="./assets/js/manage_hangman.js"></script>
-    <script src="./assets/js/manage_messages.js"></script>
+    <script src="./assets/js/manage_popup.js"></script>
     <script src="./assets/js/manage_word.js"></script>
     <script src="./assets/js/manage_keyboard.js"></script>
     <script src="./assets/js/index.js"></script>
