[FIX] Created new button management .js file
Created a new .js file that groups all the functions related to the
management of buttons in the Play section.
Edited some comments.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-    <script src="./assets/js/manage_score.js"></script>
+    <script src="./assets/js/manage_button_play_section.js"></script>
     <script src="./assets/js/manage_hangman.js"></script>
     <script src="./assets/js/manage_popup.js"></script>
     <script src="./assets/js/manage_word.js"></script>
