--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="flex column justify-around items-center">
     <header id="header">
         <div id="title-container" class="bg-white">
-            <h1 id="title">Hangman</h1>
+            <h1 id="title">HangmanGame</h1>
         </div>
     </header>
 
