[FIXED] Responsive height 740px

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <div id="word-section"></div>
-    <div id="play-section" class="flex col-wrap items-end">
+    <div id="play-section" class="flex col-wrap">
         <button id="change-word-btn" class="ply-btn bg-white c-blue margin-top">Change word</button>
         <button id="change-topic-btn" class="ply-btn bg-white c-blue margin-bottom">Change topic</button>
         <div id="gallow-container">
