[FIXED] Responsive bug

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body class="flex column justify-around items-center">
+<body class="flex column justify-center">
     <header id="header">
         <div id="title-container" class="bg-white">
             <h1 id="title">HangmanGame</h1>
         </div>
     </header>
-
-    <div id="word-section"></div>
+    <main id="main" class="flex column justify-between items-center">
+        <div id="word-section"></div>
     <div id="play-section" class="flex col-wrap">
         <button id="change-word-btn" class="ply-btn bg-white c-blue margin-top">Change word</button>
         <button id="change-topic-btn" class="ply-btn bg-white c-blue margin-bottom">Change topic</button>
@@ -35,6 +35,8 @@
         <button id="reset-score-btn" class="ply-btn bg-white c-blue margin-bottom">Reset Score</button>        
     </div>
     <div id="keyboard-section"></div>
+    </main>
+    
 
 
 
