[UPDATED] Hidden words in string array #13
The variables containing the hidden words are no longer word strings,
but arrays of words, however divided by topic.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-
+    <script src="./assets/js/get_words.js"></script>
     <script src="./assets/js/manage_button_play_section.js"></script>
     <script src="./assets/js/manage_hangman.js"></script>
     <script src="./assets/js/manage_popup.js"></script>
