[UPDATE] Assets js #16
Renamed the .js files to make them more readable.
Created play_manager.js containing the game-related part, leaving only
the game preparation part in index.js.

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
 
 
-
-    <script src="./assets/js/get_words.js"></script>
-    <script src="./assets/js/manage_button_play_section.js"></script>
-    <script src="./assets/js/manage_hangman.js"></script>
-    <script src="./assets/js/manage_popup.js"></script>
-    <script src="./assets/js/manage_word.js"></script>
-    <script src="./assets/js/manage_keyboard.js"></script>
+    <script src="./assets/js/play_manager.js"></script>
+    <script src="./assets/js/words.js"></script>
+    <script src="./assets/js/button_play_section_manager.js"></script>
+    <script src="./assets/js/hangedman_manager.js"></script>
+    <script src="./assets/js/popup_manager.js"></script>
+    <script src="./assets/js/word_manager.js"></script>
+    <script src="./assets/js/keyboard_manager.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
 
