[FIXED] .js file in src folder #22
All .js files have been moved to the new src folder.

--- a/index.html
+++ b/index.html
@@ -84,15 +84,14 @@
     </main>
 
 
-
-    <script src="./assets/js/play_manager.js"></script>
-    <script src="./assets/js/words.js"></script>
-    <script src="./assets/js/button_play_section_manager.js"></script>
-    <script src="./assets/js/hangedman_manager.js"></script>
-    <script src="./assets/js/popup_manager.js"></script>
-    <script src="./assets/js/word_manager.js"></script>
-    <script src="./assets/js/keyboard_manager.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="/src/play_manager.js"></script>
+    <script src="/src/words.js"></script>
+    <script src="/src/button_play_section_manager.js"></script>
+    <script src="/src/hangedman_manager.js"></script>
+    <script src="/src/popup_manager.js"></script>
+    <script src="/src/word_manager.js"></script>
+    <script src="/src/keyboard_manager.js"></script>
+    <script src="/src/index.js"></script>
 </body>
 
 </html>
